--- a/api-test/index.html
+++ b/api-test/index.html
@@ -8,14 +8,14 @@
   </head>
   <body class="bg-secondary">
     <div class="container d-flex justify-content-center align-items-center text-center" style="height: 100vh;">
-        <div class="row">
+        <div class="row" id="infos">
             <h5 class="text-white fw-bold" style="font-size: 5rem;">New York</h5>
             <h1 class="text-white fw-bold" style="font-size: 20rem;">68°C</h1>
             <h5 class="text-white fw-bold" style="font-size: 5rem;">Nuageux</h5>
         </div>
         
     </div>
-    
+    <script src="api.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
