--- a/api-test/index.html
+++ b/api-test/index.html
@@ -4,14 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body class="bg-secondary">
+  <body class="" style="background-color: #1e81b0;">
     <div class="container d-flex justify-content-center align-items-center text-center" style="height: 100vh;">
-        <div class="row" id="infos">
-            <h5 class="text-white fw-bold" style="font-size: 5rem;">New York</h5>
-            <h1 class="text-white fw-bold" style="font-size: 20rem;">68°C</h1>
-            <h5 class="text-white fw-bold" style="font-size: 5rem;">Nuageux</h5>
+      
+      <div class="row" id="infos">
+            <h5 class="text-white fw-bold" style="font-size: 5rem;" id="city">New York</h5>
+            <h1 class="text-white fw-bold" style="font-size: 20rem;" id="temperature">68°C</h1>
+            <h5 class="text-white fw-bold" style="font-size: 5rem;" id="environnement">Nuageux</h5>
         </div>
         
     </div>
