--- a/api-test/index.html
+++ b/api-test/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Méteo Api</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
@@ -11,9 +11,9 @@
     <div class="container d-flex justify-content-center align-items-center text-center" style="height: 100vh;">
       
       <div class="row" id="infos">
-            <h5 class="text-white fw-bold" style="font-size: 5rem;" id="city">New York</h5>
-            <h1 class="text-white fw-bold" style="font-size: 20rem;" id="temperature">68°C</h1>
-            <h5 class="text-white fw-bold" style="font-size: 5rem;" id="environnement">Nuageux</h5>
+            <h5 class="text-white fw-bold" style="font-size: 5rem; font-family: sans-serif;" id="city">New York</h5>
+            <span id="temp-max"></span><h1 class="text-white fw-bold" style="font-size: 20rem; font-family: sans-serif;" id="temperature">68°C</h1> <span id="temp-min"></span>
+            <h5 class="text-white fw-bold" style="font-size: 5rem; font-family: sans-serif;" id="environnement">Nuageux</h5>
         </div>
         
     </div>
